--- a/index-2.html
+++ b/index-2.html
@@ -15,12 +15,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/css/layerslider.min.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.min.css">
-    <link rel="stylesheet" href="assets/css/slick.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="fontawesome.min.css">
+    <link rel="stylesheet" href="layerslider.min.css">
+    <link rel="stylesheet" href="magnific-popup.min.css">
+    <link rel="stylesheet" href="slick.min.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -508,16 +508,16 @@
         </div>
     </footer>
     <a href="#" class="scrollToTop scroll-btn"><i class="far fa-arrow-up"></i></a>
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/layerslider.utils.js"></script>
-    <script src="assets/js/layerslider.transitions.js"></script>
-    <script src="assets/js/layerslider.kreaturamedia.jquery.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="slick.min.js"></script>
+    <script src="layerslider.utils.js"></script>
+    <script src="layerslider.transitions.js"></script>
+    <script src="layerslider.kreaturamedia.jquery.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="jquery.magnific-popup.min.js"></script>
+    <script src="imagesloaded.pkgd.min.js"></script>
+    <script src="isotope.pkgd.min.js"></script>
+    <script src="wow.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
