--- a/index-2.html
+++ b/index-2.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="MNG">
     <meta name="robots" content="INDEX,FOLLOW">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
     <div class="preloader  ">
         <button class="vs-btn preloaderCls">Cancel Preloader </button>
         <div class="preloader-inner">
-            <div class="loader-logo"><img src="assets/img/mng.png" alt="logo"></div>
+            <div class="loader-logo"><img src="mng.png" alt="logo"></div>
             <div class="spinner"></div>
         </div>
     </div>
@@ -42,7 +42,7 @@
             <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
                 <a href="index-2.html">
-                    <img src="assets/img/mng.png" alt="logo"> </a>
+                    <img src="mng.png" alt="logo"> </a>
             </div>
             <div class="vs-mobile-menu">
                 <ul>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-auto">
                         <div class="header-logo2">
-                            <a href="index-2.html"><img style="border-radius: 100%;" src="assets/img/mng.png" alt="logo"></a>
+                            <a href="index-2.html"><img style="border-radius: 100%;" src="mng.png" alt="logo"></a>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-end gap-4">
@@ -100,7 +100,7 @@
     <section class="vs-hero-wrapper position-relative  ">
         <div class="vs-hero-carousel" data-height="940" data-container="1900" data-slidertype="responsive">
             <div class="ls-slide" data-ls="duration:12000; transition2d:5,6,7,8; kenburnsscale:1.2;">
-                <img width="1920" height="938" src="assets/img/pubg-mobile-game-image-5.jpg" class="ls-bg" alt="hero-bg" decoding="async">
+                <img width="1920" height="938" src="pubg-mobile-game-image-5.jpg" class="ls-bg" alt="hero-bg" decoding="async">
                 <ls-layer style="font-size:36px; color:#000; text-align:left; font-style:normal; text-decoration:none; text-transform:none; font-weight:400; letter-spacing:0px; background-position:0% 0%; background-repeat:no-repeat; background-clip:border-box; overflow:visible; left:0px; top:742px; width: 1920px; height: 200px; -webkit-background-clip:border-box;" class="ls-l ls-hide-phone ls-html-layer" data-ls="static:forever;">
                     <div class="body-shape1 d-hd-none"></div>
                 </ls-layer>
@@ -119,18 +119,18 @@
             </div>
         </div>
     </section>
-    <div data-bg-src="assets/img/image-99.png">
+    <div data-bg-src="image-99.png">
         <section class="team-wrap1 space-extra-bottom">
             <div class="container">
                 <div class="row vs-carousel wow fadeInUp" data-wow-delay="0.3s" data-slide-show="3" data-md-slide-show="2" data-center-mode="true" data-xl-center-mode="true" data-dots="true">
                     <div class="col-xl-4 team-style1 ">
                         <div class="team-body">
                             <div class="team-logo">
-                                <a href="#"><img src="assets/img/mng.png" alt="team logo"></a>
+                                <a href="#"><img src="mng.png" alt="team logo"></a>
                             </div>
                             <h3 class="team-name h4"><a href="#" class="text-inherit">MNG-BOT</a></h3>
                             <div class="team-avaters">
-                                <div class="avater"><img src="assets/img/match/mt-av-2-1.jpg" alt="avater"></div>
+                                <div class="avater"><img src="match/mt-av-2-1.jpg" alt="avater"></div>
                             </div>
                             <div class="team-bottom">
                                 <div class="team-info">
@@ -151,11 +151,11 @@
                     <div class="col-xl-4 team-style1 ">
                         <div class="team-body">
                             <div class="team-logo">
-                                <a href="#"><img src="assets/img/mng.png" alt="team logo"></a>
+                                <a href="#"><img src="mng.png" alt="team logo"></a>
                             </div>
                             <h3 class="team-name h4"><a href="#" class="text-inherit">MNG-BOT</a></h3>
                             <div class="team-avaters">
-                                <div class="avater"><img src="assets/img/match/mt-av-2-1.jpg" alt="avater"></div>
+                                <div class="avater"><img src="match/mt-av-2-1.jpg" alt="avater"></div>
                             </div>
                             <div class="team-bottom">
                                 <div class="team-info">
@@ -176,11 +176,11 @@
                     <div class="col-xl-4 team-style1 ">
                         <div class="team-body">
                             <div class="team-logo">
-                                <a href="#"><img src="assets/img/mng.png" alt="team logo"></a>
+                                <a href="#"><img src="mng.png" alt="team logo"></a>
                             </div>
                             <h3 class="team-name h4"><a href="#" class="text-inherit">MNG-BOT</a></h3>
                             <div class="team-avaters">
-                                <div class="avater"><img src="assets/img/match/mt-av-2-1.jpg" alt="avater"></div>
+                                <div class="avater"><img src="match/mt-av-2-1.jpg" alt="avater"></div>
                             </div>
                             <div class="team-bottom">
                                 <div class="team-info">
@@ -201,11 +201,11 @@
                     <div class="col-xl-4 team-style1 ">
                         <div class="team-body">
                             <div class="team-logo">
-                                <a href="#"><img src="assets/img/mng.png" alt="team logo"></a>
+                                <a href="#"><img src="mng.png" alt="team logo"></a>
                             </div>
                             <h3 class="team-name h4"><a href="#" class="text-inherit">MNG-BOT</a></h3>
                             <div class="team-avaters">
-                                <div class="avater"><img src="assets/img/match/mt-av-2-1.jpg" alt="avater"></div>
+                                <div class="avater"><img src="match/mt-av-2-1.jpg" alt="avater"></div>
                             </div>
                             <div class="team-bottom">
                                 <div class="team-info">
@@ -226,11 +226,11 @@
                     <div class="col-xl-4 team-style1 ">
                         <div class="team-body">
                             <div class="team-logo">
-                                <a href="#"><img src="assets/img/mng.png" alt="team logo"></a>
+                                <a href="#"><img src="mng.png" alt="team logo"></a>
                             </div>
                             <h3 class="team-name h4"><a href="#" class="text-inherit">MNG-BOT</a></h3>
                             <div class="team-avaters">
-                                <div class="avater"><img src="assets/img/match/mt-av-2-1.jpg" alt="avater"></div>
+                                <div class="avater"><img src="match/mt-av-2-1.jpg" alt="avater"></div>
                             </div>
                             <div class="team-bottom">
                                 <div class="team-info">
@@ -265,13 +265,13 @@
                 <div class="row justify-content-between mt-30 mg-xl-0">
                     <div class="col-md-4 col-xxl-auto wow fadeInUp" data-wow-delay="0.3s">
                         <div class="img-box2">
-                            <div class="img-1"><img src="assets/img/mng-4.png" alt="about"></div>
-                            <div class="img-2 jump-img"><img src="assets/img/mng-3.png" alt="about"></div>
+                            <div class="img-1"><img src="mng-4.png" alt="about"></div>
+                            <div class="img-2 jump-img"><img src="mng-3.png" alt="about"></div>
                         </div>
                     </div>
                     <div class="col-md-8 col-xxl-auto wow fadeInUp" data-wow-delay="0.3s">
                         <div class="img-box3">
-                            <div class="img-1"><img src="assets/img/img-og-pubg.png" alt="about"></div>
+                            <div class="img-1"><img src="img-og-pubg.png" alt="about"></div>
                             <a href="https://www.youtube.com/watch?v=wYCQmnieZyw" class="play-btn style2 popup-video position-center"><i class="fas fa-play"></i></a>
                         </div>
                     </div>
@@ -288,22 +288,22 @@
             </div>
             <div class="slick-3d-active wow fadeInUp" data-wow-delay="0.4s" id="playeravater1">
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
                 <div class="slick-3d">
-                    <div class="player-avater1"><img src="assets/img/mng-5.png" alt="player"></div>
+                    <div class="player-avater1"><img src="mng-5.png" alt="player"></div>
                 </div>
             </div>
             <div class="player-slider1 wow fadeInUp" data-wow-delay="0.5s">
@@ -311,7 +311,7 @@
                     <div class="player-style2">
                         <div class="player-content">
                             <div class="player-team-logo">
-                                <img src="assets/img/mng.png" alt="logo">
+                                <img src="mng.png" alt="logo">
                             </div>
                             <h3 class="player-title"><a href="player-details.html" class="text-inherit">EKO</a></h3>
                             <p class="player-degi">Team Leader</p>
@@ -327,7 +327,7 @@
                     <div class="player-style2">
                         <div class="player-content">
                             <div class="player-team-logo">
-                                <img src="assets/img/mng.png" alt="logo">
+                                <img src="mng.png" alt="logo">
                             </div>
                             <h3 class="player-title"><a href="player-details.html" class="text-inherit">TUKU</a></h3>
                             <p class="player-degi">Rifler</p>
@@ -343,7 +343,7 @@
                     <div class="player-style2">
                         <div class="player-content">
                             <div class="player-team-logo">
-                                <img src="assets/img/mng.png" alt="logo">
+                                <img src="mng.png" alt="logo">
                             </div>
                             <h3 class="player-title"><a href="player-details.html" class="text-inherit">Winter</a></h3>
                             <p class="player-degi">Support</p>
@@ -359,7 +359,7 @@
                     <div class="player-style2">
                         <div class="player-content">
                             <div class="player-team-logo">
-                                <img style="border-radius: 100%;" src="assets/img/mng.png" alt="logo">
+                                <img style="border-radius: 100%;" src="mng.png" alt="logo">
                             </div>
                             <h3 class="player-title"><a href="player-details.html" class="text-inherit">BOT</a></h3>
                             <p class="player-degi">Pro Adult</p>
@@ -374,13 +374,13 @@
             </div>
         </div>
     </section>
-    <div class="pb-3px" style="padding-top: 20px;" data-bg-src="assets/img/img-og-pubg.jpg">
+    <div class="pb-3px" style="padding-top: 20px;" data-bg-src="img-og-pubg.jpg">
         <div class="space-extra-bottom">
             <div class="container">
                 <div class="row justify-content-around">
                     <div class="col-6 col-md-3 col-xl-auto wow fadeInUp" data-wow-delay="0.3s">
                         <div class="counter-style2">
-                            <div class="counter-icon"><img src="assets/img/icon/counter-2-1.png" alt="icon"></div>
+                            <div class="counter-icon"><img src="icon/counter-2-1.png" alt="icon"></div>
                             <div class="media-body">
                                 <span class="counter-number">135</span>
                                 <span class="counter-text">GAMES PLAYED</span>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="col-6 col-md-3 col-xl-auto wow fadeInUp" data-wow-delay="0.4s">
                         <div class="counter-style2">
-                            <div class="counter-icon"><img src="assets/img/icon/counter-2-2.png" alt="icon"></div>
+                            <div class="counter-icon"><img src="icon/counter-2-2.png" alt="icon"></div>
                             <div class="media-body">
                                 <span class="counter-number">89</span>
                                 <span class="counter-text">FLAGS TAKEN</span>
@@ -398,7 +398,7 @@
                     </div>
                     <div class="col-6 col-md-3 col-xl-auto wow fadeInUp" data-wow-delay="0.5s">
                         <div class="counter-style2">
-                            <div class="counter-icon"><img src="assets/img/icon/counter-2-3.png" alt="icon"></div>
+                            <div class="counter-icon"><img src="icon/counter-2-3.png" alt="icon"></div>
                             <div class="media-body">
                                 <span class="counter-number">32</span>
                                 <span class="counter-text">DEATHMATCHES</span>
@@ -407,7 +407,7 @@
                     </div>
                     <div class="col-6 col-md-3 col-xl-auto wow fadeInUp" data-wow-delay="0.6s">
                         <div class="counter-style2">
-                            <div class="counter-icon"><img src="assets/img/icon/counter-2-4.png" alt="icon"></div>
+                            <div class="counter-icon"><img src="icon/counter-2-4.png" alt="icon"></div>
                             <div class="media-body">
                                 <span class="counter-number">17</span>
                                 <span class="counter-text">TOURNAMENTS</span>
@@ -431,7 +431,7 @@
                     <div class="col-xl-4">
                         <div class="vs-product product-style1">
                             <div class="product-img">
-                                <a href="#"><img src="assets/img/mng.png" alt="product"></a>
+                                <a href="#"><img src="mng.png" alt="product"></a>
                             </div>
                             <div class="product-content">
                                 <div class="product-category">
@@ -447,7 +447,7 @@
                     <div class="col-xl-4">
                         <div class="vs-product product-style1">
                             <div class="product-img">
-                                <a href="#"><img src="assets/img/mng.png" alt="product"></a>
+                                <a href="#"><img src="mng.png" alt="product"></a>
                             </div>
                             <div class="product-content">
                                 <div class="product-category">
@@ -463,7 +463,7 @@
                     <div class="col-xl-4">
                         <div class="vs-product product-style1">
                             <div class="product-img">
-                                <a href="#"><img src="assets/img/mng.png" alt="product"></a>
+                                <a href="#"><img src="mng.png" alt="product"></a>
                             </div>
                             <div class="product-content">
                                 <div class="product-category">
@@ -479,7 +479,7 @@
                     <div class="col-xl-4">
                         <div class="vs-product product-style1">
                             <div class="product-img">
-                                <a href="#"><img src="assets/img/mng.png" alt="product"></a>
+                                <a href="#"><img src="mng.png" alt="product"></a>
                             </div>
                             <div class="product-content">
                                 <div class="product-category">
@@ -496,7 +496,7 @@
             </div>
         </section>
     </div>
-    <footer class="footer-wrapper footer-layout2" style="padding-top: 50px;" data-bg-src="assets/img/bg/footer-bg-2-1.jpg">
+    <footer class="footer-wrapper footer-layout2" style="padding-top: 50px;" data-bg-src="bg/footer-bg-2-1.jpg">
         <div class="widget-area">
             <div class="container">
             </div>
